Fixed: visibility for windows

--- a/src/main/webapp/styles/window.css
+++ b/src/main/webapp/styles/window.css
@@ -4,6 +4,11 @@
 	position: absolute;
 }
 
+.window,
+.window * {
+	transition: all 0.5s, left 0s, top 0s;
+}
+
 .window .window_title {
 	position: absolute;
 	top: 0px;
